// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component 1`] = `
<section
  className="app"
>
  <h1>
    Home
  </h1>
  <img
    alt="logo"
    height={16}
    src="./images/logo.svg"
    width={16}
  />
  hello, world!
  <br />
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
</section>
`;

exports[`App component 2`] = `
<section
  className="app"
>
  <h1>
    Home
  </h1>
  <img
    alt="logo"
    height={16}
    src="./images/logo.svg"
    width={16}
  />
  test text
  <br />
  <input
    onChange={[Function]}
    type="text"
    value="test text"
  />
</section>
`;
